--- a/w4labstuents.html
+++ b/w4labstuents.html
@@ -9,7 +9,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <table class="table table-striped" id="studentTable">
+        <table class="table table-bordered" id="studentTable">
             <tr>
               <th>First Name</th>
               <th>Last Name</th>
